fix: input date on ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,11 @@
 body {
   width: 100%;
 }
+
+input[type="date"] {
+  display: block;
+
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  min-height: 1.2em;
+}
